--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.0.0",
     "gsap": "^3.12.7",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "next": "15.1.4",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.3",
