--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.7.9",
     "daisyui": "^4.12.23",
+    "dompurify": "^3.2.4",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.0.0",
     "gsap": "^3.12.7",
