--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "next": "15.1.4",
+    "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.3",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-pro-sidebar": "^1.1.0",
+    "react-quill": "^2.0.0",
     "react-toastify": "^11.0.3",
     "sharp": "^0.33.5",
     "swiper": "^11.2.1",
