--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.3",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-pro-sidebar": "^1.1.0",
